# ecn_visualservo

./: .gitignore  CMakeLists.txt  README.md  config.yaml  main.cpp
include/: feature_stack.h  logger.h  simulator.h
results/cMo_lm-cdMo_lm/XY4/: Zc_lambda0.5_eigvals.yaml  Zc_lambda0.5_err.yaml  Zc_lambda0.5_image.yaml  Zc_lambda0.5_pose.yaml  Zc_lambda0.5_v.yaml
results/cMo_lm-cdMo_lm/cTo/: lambda0.5_err.yaml  lambda0.5_image.yaml  lambda0.5_pose.yaml  lambda0.5_v.yaml
results/cMo_lm-cdMo_lm/cTo_cdRc/: lambda0.5_config.yaml  lambda0.5_eigvals.yaml  lambda0.5_err.yaml  lambda0.5_image.yaml  lambda0.5_pose.yaml  lambda0.5_v.yaml
results/cMo_lm-cdMo_lm/oTc_cdRc/: lambda0.5_err.yaml  lambda0.5_image.yaml  lambda0.5_pose.yaml  lambda0.5_v.yaml
results/cMo_t-cdMo/: lambda0.5_config.yaml  lambda0.5_image.yaml  lambda0.5_pose.yaml  lambda0.5_v.yaml
results/cMo_t-cdMo/XY1_Depth1_cdRc/: Zc_lambda0.5_config.yaml  Zc_lambda0.5_err.yaml  Zc_lambda0.5_image.yaml  Zc_lambda0.5_pose.yaml  Zc_lambda0.5_v.yaml
results/cMo_t-cdMo/XY4/: Zc_lambda0.2_err.yaml  Zc_lambda0.2_image.yaml  Zc_lambda0.2_pose.yaml  Zc_lambda0.2_v.yaml  Zc_lambda0.5_eigvals.yaml  Zc_lambda0.5_err.yaml  Zc_lambda0.5_image.yaml  Zc_lambda0.5_pose.yaml  Zc_lambda0.5_v.yaml
results/cMo_t-cdMo/cTo_cdRc/: lambda0.2_config.yaml  lambda0.2_err.yaml  lambda0.2_image.yaml  lambda0.2_pose.yaml  lambda0.2_v.yaml
src/: feature_stack.cpp  simulator.cpp
subject/: visual_servo.tex
